testsuite/tests/properties/invalid_lambda_arg_type/logic_any_no_index.lkt
import common

class ExampleBlock: BaseExampleBlock {
    @exported fun p(): Array[Entity[Example]] =
        node.items.logic_any((_: Example, _: Bool) => %true).solve()
}
